--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: LGI
+title: LGI Alliance
 description: "Last Z: Survival Shooter | LGI Alliance"
 discord_url: "https://discord.gg/zYKgeDzbXx"
