--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker-compose.yml
 services:
   jekyll:
     image: jekyll/jekyll:4.2.0
@@ -5,6 +6,6 @@ services:
     ports:
       - "4001:4001"
     volumes:
-      - .:/srv/jekyll:cached
+      - ./lgi:/srv/jekyll:cached
     environment:
       - JEKYLL_ENV=development
