--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-# lgi/_config.yml
+cache_dir: /.jekyll-cache-tmp
+
+source: lgi
 baseurl: "/lgi"
 title: LGI Alliance
 description: "Last Z: Survival Shooter | LGI Alliance"
 discord_url: "https://discord.gg/zYKgeDzbXx"
-source: lgi
