--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -1,26 +1,28 @@
+# .github/workflows/pr-preview.yml
 name: PR Preview
 
 on:
   pull_request:
     branches: [ main ]
-    types: [ opened, synchronize, reopened ]
+    types: [ opened, synchronize, reopened, closed ]
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
+  pull-requests: write
 
 concurrency:
   group: pr-${{ github.event.pull_request.number }}
   cancel-in-progress: true
 
 jobs:
-  build:
+  preview:
+    if: github.event.action != 'closed'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Build Jekyll site
         run: |
@@ -30,18 +32,27 @@ jobs:
             --env JEKYLL_UID="$(id -u)" \
             --env JEKYLL_GID="$(id -g)" \
             jekyll/builder:4 \
-            jekyll build
+            jekyll build --baseurl "/lgi/pr-preview/pr-${{ github.event.pull_request.number }}"
 
-      - uses: actions/upload-pages-artifact@v3
+      - name: Deploy PR Preview
+        uses: rossjrw/pr-preview-action@v1
         with:
-          path: _site
+          source-dir: _site
+          token: ${{ secrets.GITHUB_TOKEN }}
+          preview-branch: gh-pages
+          umbrella-dir: lgi/pr-preview
+          comment: true
 
-  deploy:
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  cleanup:
+    if: github.event.action == 'closed'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/deploy-pages@v4
-        id: deployment
+      - name: Remove PR Preview
+        uses: rossjrw/pr-preview-action@v1
+        with:
+          source-dir: _site
+          token: ${{ secrets.GITHUB_TOKEN }}
+          preview-branch: gh-pages
+          umbrella-dir: lgi/pr-preview
+          comment: false
+          action: remove
